[gd_scene load_steps=2 format=3 uid="uid://game_overlay_scene"]

[ext_resource type="Script" path="res://scripts/ui/game_overlay.gd" id="1"]

[node name="GameOverlay" type="CanvasLayer"]
layer = 10
script = ExtResource("1")

[node name="CountdownPanel" type="Control" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="ColorRect" parent="CountdownPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.5)

[node name="CountdownLabel" type="Label" parent="CountdownPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -50.0
offset_right = 100.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 72
text = "3"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PausePanel" type="Control" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="ColorRect" parent="PausePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="VBoxContainer" type="VBoxContainer" parent="PausePanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -80.0
offset_right = 100.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="PauseLabel" type="Label" parent="PausePanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "PAUSED"
horizontal_alignment = 1

[node name="ResumeButton" type="Button" parent="PausePanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "Resume"

[node name="QuitButton" type="Button" parent="PausePanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "Quit"

[node name="ResultPanel" type="Control" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="ColorRect" parent="ResultPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="VBoxContainer" type="VBoxContainer" parent="ResultPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -80.0
offset_right = 150.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30

[node name="ResultLabel" type="Label" parent="ResultPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 56
text = "VICTORY!"
horizontal_alignment = 1

[node name="ContinueButton" type="Button" parent="ResultPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "Continue"
